--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ footer nav li{
     list-style: none;
     margin: 0;
     padding: 1rem;
-    display: flex;
+    display: inline-block;
     justify-content: center;
 }
 
