Cleaning innecesary comments

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ header {
     color: white;
     padding: 0.5rem;
     border-bottom: 1px solid #07EBE5;
-   /*  width: 100%; */
     display: flex;
     flex-wrap: wrap;
     background-color: none;
@@ -63,10 +62,9 @@ body p {
     color: #1f2227;;
 }
 
-/* Site-Branding */
+/*------------------- Site-Branding------------------- */
 .site-branding {
     display: flex;
-    /* flex-wrap: nowrap; */
     justify-items: center;
     align-items: center;
     margin-right: 0.5rem;
@@ -82,7 +80,7 @@ body p {
 }
 
 
-/* Menu */
+/*------------------- Menu ----------------- */
 
 .menu-simple-menu {
     padding: 1px;
@@ -125,7 +123,7 @@ body p {
     z-index: 2;
 }
 
-/* Animación del Menu */
+/*------------------ Menu Animation ------------------ */
 .menu-simple-menu li a::after {
     content:"";
     width: 1px;
@@ -154,7 +152,7 @@ body p {
 }
 
 
-/* Main Page */
+/*--------------- Main Page --------------------------------------- */
 .main-grid {
     display: grid;
     grid-template: auto / 1fr 0.3fr;
@@ -193,7 +191,7 @@ body p {
     padding: 1rem;
 }
 
-/* Carousel */
+/*------------------ Carousel -------------------------------------- */
 .premieres {
     grid-area: premieres;
     display: flex;
@@ -219,7 +217,7 @@ body p {
     max-width: 250px;
 }
 
-/* Premieres Arrows */
+/*--------------- Carousel Arrows ------------------ */
 
 .scroll-test {
     position: absolute;
@@ -247,13 +245,13 @@ body p {
   .left-arrow i, .right-arrow i {
     color: #FFFFFF; 
     font-size: 50px;
+    cursor: pointer;
   }
 
 .premiere-img {
     width: 100%;
     height: 80%;
     border-radius: 40px;
-    /* object-fit: contain; */
     margin: 0;
     padding: 1rem 0.5rem 0;
 }
@@ -265,7 +263,7 @@ body p {
 }
 
 
-/* Main Grid articles */
+/*---------------- Main Grid articles ------------------*/
 .img1,.img2,.img3,.img4,.img5 {
     display: flex;
     background-color: bisque;
@@ -328,7 +326,6 @@ body p {
 .section-grid article > img {
     padding:0.3rem;
     margin: 0;
-    /* object-fit:contain; */
     width: 95%;
 } 
 
@@ -347,7 +344,7 @@ body p {
     margin-bottom: 0.5rem;
 }
 
-/* Botón Read More de News del Main Grid */
+/*------------------- Read More Button for Main Grid News ----------------- */
 .readMoreNews {
     font-family: 'Work Sans', sans-serif;
     font-size: 0.8rem;
@@ -371,12 +368,12 @@ body p {
     min-width: fit-content;
 }
 
-/* Hidden Paragraphs */
+/*---------------- Hidden Paragraphs --------------------- */
 .new p:nth-child(3), .new p:nth-child(4) {
     display: none;
 }
 
-/* Show Paragraphs */
+/*------------- Show Paragraphs ---------------------- */
 .new.open > p {
     display: block;
 }
@@ -388,9 +385,8 @@ body p {
 } */
 
 
-/* Aside */
+/*--------------- Aside ------------------------ */
 aside {
-    /* display: flex; */
     background-color:#00a6ae;
     padding:1rem;
     margin: 1rem 1rem 1rem 0;
@@ -424,7 +420,7 @@ aside h2 {
     /* transition: 0.3s ease-in-out all */
 }
 
-/* Animación del Menu */
+/*-------------------- Aside Menu Animation --------------- */
 .categories li a::after {
     content:"";
     width: 1px;
@@ -469,7 +465,7 @@ aside h2 {
     text-align: center;
 }
 
-/* Media Queries Main */
+/*----------------- Media Queries Main ----------------------------------- */
 @media screen and (max-width:992px) {  
     .main-grid {
         display: grid;
@@ -561,7 +557,7 @@ aside h2 {
 }
 
 
-/* Footer */
+/*------------------- Footer ---------------------------------- */
 
 footer nav {
     background-color: black;
@@ -580,7 +576,7 @@ footer nav li a {
     color: white;
 }
 
-/* About Page */
+/* ----------------- About Page ------------------------- */
 .developers-profile {
     background-color: bisque;
     padding: 1.4rem 1.4rem 2.8rem;
@@ -625,7 +621,6 @@ footer nav li a {
     margin-top: 1.5rem;
     margin-bottom: 0;
     text-align: center;
-    /* width: 90vw; */
     height: 30vw;
     min-height: 200px;
 }
@@ -668,7 +663,7 @@ footer nav li a {
     width: 100%;
 }
 
-/* Distribuye en 2 columnas cuando la resolusión es entre 600px hasta 768 px para tablets y large phones*/
+/*------------- Media Queries About Page ------------------*/
 @media screen and (min-width:768px) {
     .branch {
         flex-basis: calc(49%);
@@ -696,7 +691,7 @@ footer nav li a {
     }
 }
 
-/*Distribuye en 3 columnas al pasar los 992px para landscape tablets, laptops y desktops*/
+
 @media screen and (min-width:992px) {
     .branch {
         flex-basis: calc(33%);
@@ -711,7 +706,7 @@ footer nav li a {
     }
 }
 
-/* Reviews Page */
+/*------------------- Reviews Page --------------------------- */
 
 .scroll-title {
     position: sticky;
@@ -723,7 +718,6 @@ footer nav li a {
     color: #FFFFFF;
     font-size: 1.5rem;
     font-weight: bold;
-    /* height: fit-content; */
 }
 
 
@@ -737,7 +731,6 @@ footer nav li a {
     border-color:#1F2227;
     border-style:dashed;
     font-weight: 900;
-    /* height: fit-content; */
 }
 
 .movie {
@@ -766,7 +759,6 @@ footer nav li a {
 .picture img {
     margin: auto;
     padding: 0;
-    /* object-fit: cover; */
     width: 50%;
     height: 50%;
     max-width: 400px;
@@ -785,7 +777,7 @@ footer nav li a {
     color:#FFFFFF;
 }
 
-/*Estado  visible para el botón Read More y Read Less*/
+/*-------- Visible Status Read More and Read Less Reviews Buttons ------------------*/
 .description.open {
     max-height: 100%;
     overflow: visible;
@@ -833,7 +825,7 @@ footer nav li a {
 }
 
 
-/* Paso de 1 columna a 2 al superar una resolución de 768px */
+/*----------------- Media Queries Reviews Page ---------------*/
 
 @media screen and (min-width:768px) {
     .movie {
@@ -895,7 +887,7 @@ footer nav li a {
 
 
 
-/*Contact Page*/
+/*-------------------- Contact Page --------------------------*/
 
 body form {
     margin: 0.2em;
@@ -916,10 +908,6 @@ body form {
     min-width: 100%;
     margin: 0;
 }
-
-/* #firstname, #dni {
-    margin-bottom: 10px;
-} */
 
 #firstname, #lastname, #dni, #birthday, #emailAdress {
     min-width: 100%;
